--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=DelayExec
-version=0.1.0
+version=0.1.1
 author=Sébastien Millet
 maintainer=Sébastien Millet <milletseb@laposte.net>
 sentence=A library to defer executions
-paragraph=Use this library to execute functions in a deferred manner.
+paragraph=Allows to execute once or repeat execution forever, also allows to schedule a new task *from inside* a function called by the scheduler. Thus one can decide during scheduled task execution, whether or not to schedule another execution and to what delay.
 category=Timing
 url=https://github.com/sebmillet/DelayExec
 architectures=avr
